crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__selective_import_known_library_valid.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load trans from i18n %}

Diagnostics (0)
