crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__selective_import_makes_only_imported_symbol_available.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load trans from i18n %}
   2 | {% trans 'hello' %}
   3 | {% blocktrans %}{% endblocktrans %}

Diagnostics (1)
1. UnloadedTag: Tag 'blocktrans' requires {% load i18n %}
    --> test.html:3:1
   3 | {% blocktrans %}{% endblocktrans %}
     | ^^^^^^^^^^^^^^^^
