crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__selective_import_unknown_library_produces_s120.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% load foo from nonexistent %}

Diagnostics (1)
1. UnknownLibrary: Unknown template tag library 'nonexistent'
    --> test.html:1:1
   1 | {% load foo from nonexistent %}
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
