crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__structural_tags_skip_scoping_checks.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% if True %}{% elif False %}{% else %}{% endif %}

Diagnostics (0)
