crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__tag_before_load_produces_error.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% trans 'hello' %}
   2 | {% load i18n %}

Diagnostics (1)
1. UnloadedTag: Tag 'trans' requires {% load i18n %}
    --> test.html:1:1
   1 | {% trans 'hello' %}
     | ^^^^^^^^^^^^^^^^^^^
