crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__tag_in_env_but_not_installed_apps_produces_s118.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% ordinal 42 %}

Diagnostics (1)
1. TagNotInInstalledApps: Tag 'ordinal' requires 'django.contrib.humanize' in INSTALLED_APPS
    --> test.html:1:1
    load_name: humanize
   1 | {% ordinal 42 %}
     | ^^^^^^^^^^^^^^^^
