crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__tag_in_multiple_env_packages_produces_s118.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% shared_tag %}

Diagnostics (1)
1. TagNotInInstalledApps: Tag 'shared_tag' requires 'app_a' in INSTALLED_APPS
    --> test.html:1:1
    load_name: utils_a
   1 | {% shared_tag %}
     | ^^^^^^^^^^^^^^^^
