crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__tag_in_multiple_libraries_produces_s110.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% shared %}

Diagnostics (1)
1. AmbiguousUnloadedTag: Tag 'shared' is defined in multiple libraries: ["lib_a", "lib_b"]
    --> test.html:1:1
   1 | {% shared %}
     | ^^^^^^^^^^^^
