crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__truly_unknown_tag_still_s108_with_env.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {% xyz %}

Diagnostics (1)
1. UnknownTag: Unknown tag 'xyz'
    --> test.html:1:1
   1 | {% xyz %}
     | ^^^^^^^^^
