crates/djls-semantic/src/loads/snapshots/djls_semantic__loads__validation__tests__unknown_filter_produces_s111.snap
---
source: crates/djls-semantic/src/loads/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|nonexistent }}

Diagnostics (1)
1. UnknownFilter: Unknown filter 'nonexistent'
    --> test.html:1:10
   1 | {{ value|nonexistent }}
     |          ^^^^^^^^^^^
